Fix build configuration for server.ts
- Updated tsconfig.backend.json to include src/server.ts instead of src/index.ts
- Updated ecosystem.config.js to point to ./dist/server.js instead of ./dist/index.js
- This fixes the build process so the server file is properly compiled
- Health endpoint should now work correctly

--- a/tsconfig.backend.json
+++ b/tsconfig.backend.json
@@ -17,6 +17,6 @@
     "sourceMap": true,
     "types": ["node"]
   },
-  "include": ["src/index.ts", "src/routes/**/*", "src/middleware/**/*", "src/services/**/*", "src/utils/logger.ts", "src/utils/jwt.ts", "src/cron/**/*"],
+  "include": ["src/server.ts", "src/routes/**/*", "src/middleware/**/*", "src/services/**/*", "src/utils/logger.ts", "src/utils/jwt.ts", "src/cron/**/*"],
   "exclude": ["node_modules", "dist", "src/pages/**/*", "src/components/**/*", "src/hooks/**/*", "src/contexts/**/*", "src/lib/api.ts", "src/lib/trpc.ts", "src/lib/utils.ts", "src/utils/animations.ts", "src/tests/**/*", "src/_core/**/*"]
 }
