fix: update nginx and pm2 configurations for proper proxy and port settings

--- a/nginx.site.conf
+++ b/nginx.site.conf
@@ -40,7 +40,7 @@ server {
 
     # API Routes
     location /api/ {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -49,6 +49,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
 
         # Use rate limiting
         limit_req zone=api_limit burst=20 nodelay;
@@ -73,9 +75,20 @@ server {
 
     # Frontend routes
     location / {
+        # First attempt to serve static files
         try_files $uri $uri/ /index.html;
         expires -1;
         add_header Cache-Control "no-store, no-cache, must-revalidate";
+        
+        # Fall back to proxy if file not found
+        proxy_pass http://127.0.0.1:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Static assets with caching
